# BeatovenDemo

./: .env.example  .gitignore  README.md  TUTORIAL.md  debug_beatoven.py  pyproject.toml  setup.py
beatoven_ai/: __init__.py
beatoven_ai/beatoven_ai/: __init__.py  cli.py  client.py  config.py  logger.py  models.py
examples/: basic_usage.py
tests/: conftest.py  test_client.py  test_models.py
